changed height in services images to prevent drastic stretching

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,7 +365,7 @@ thead {
 
 .services-image
  {
-    height:300px;
+    height:auto;
     width:100%;
     margin-bottom: 50px;
     opacity: 0.9;
